--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,10 @@ body {
   border-width: 1px;
 }
 
+.b-none {
+  border: none;
+}
+
 .border-grey {
   border-color: #ebebeb;
 }
@@ -92,6 +96,9 @@ body {
 .p-1 {
   padding: 8px;
 }
+.p-2 {
+  padding: 20px;
+}
 
 .py-1 {
   padding-top: 8px;
@@ -108,22 +115,79 @@ body {
   margin-right: auto;
 }
 
+.mr-1 {
+  margin-right: 8px;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.gap {
+  gap: 10px;
+}
+
+.align-center {
+  align-self: center;
+}
+
+.outline-none {
+  outline: none;
+}
+
+.hide {
+  display: none;
+}
+
 .product-shadow {
   box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
+.truck-icon {
+  color: green;
+  border: green solid 1px;
+  border-radius: 50%;
+  padding: 5px;
+  position: absolute;
+  right: 15px;
+  top: -15px;
+}
+
+.relative {
+  position: relative;
+}
+
 @media (min-width: 481px) {
   /* tablet */
+  .md-w-50 {
+    width: 48%;
+  }
 }
 
 @media (min-width: 769px) {
   /* laptop */
+  .lg-w-25 {
+    width: 23%;
+  }
+
   .product-shadow {
     box-shadow: none;
   }
 
   .description {
     display: none;
+  }
+
+  .product:hover .description {
+    display: block;
   }
 }
 
