--- a/views/home.html
+++ b/views/home.html
@@ -20,22 +20,28 @@
     <title>Mercado Liebre</title>
   </head>
   <body class="bg-grey">
-    <header class="bg-yellow p-1">
+    <header class="bg-yellow p-1 flex flex-wrap">
       <h1 class="w-50">
         <img src="/images/logo-mercado-liebre.svg" alt="Mercado Liebre" />
       </h1>
-      <div class="p-1">
-        <input
-          type="text"
-          placeholder="Buscá productos por nombre, marcas o palabras clave"
-        />
-        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+      <div class="p-2 w-50 align-center">
+        <form action="/" class="p-1 flex radius-1 bg-white">
+          <input
+            class="flex-grow b-none outline-none font-xl"
+            type="text"
+            name="search"
+            placeholder="Buscá productos por nombre, marcas o palabras clave"
+          />
+          <button type="submit" class="bg-white b-none">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
       </div>
-      <p class="text-center">
+      <p class="text-center w-100 my-1">
         <i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin
         tarjeta de crédito
       </p>
-      <nav>
+      <nav class="">
         <ul class="py-1">
           <li><a class="nav-link" href="#">Ofertas</a></li>
           <li><a class="nav-link" href="#">Tiendas Oficiales</a></li>
@@ -44,7 +50,7 @@
         </ul>
         <ul class="py-1">
           <li>
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="/register"
               >Crea tu cuenta <i class="fa-solid fa-address-card"></i
             ></a>
           </li>
@@ -60,7 +66,7 @@
           </li>
         </ul>
       </nav>
-      <div class="text-center">
+      <div class="text-center w-100">
         <i class="fa-solid fa-bars p-1 bg-blue radius-1 color-white bold"></i>
       </div>
     </header>
@@ -70,105 +76,129 @@
       alt="Promoción fiestas"
     />
     <main class="p-1 vw-90 mx-auto">
-      <section class="p-1">
-        <h2 class="title">Basado en tu última visita</h2>
-        <article class="bg-white my-1 product-shadow">
+      <section class="p-1 flex flex-wrap gap">
+        <h2 class="title w-100">Basado en tu última visita</h2>
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-cafetera-moulinex.jpg"
             alt="Cafetera Moulinex"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$6.770</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$6.770</p>
             <p class="color-green text-lg">40% OFF</p>
-            <h3 class="text-lg description">Cafetera Moulinex</h3>
+            <h3 class="text-lg description w-100">Cafetera Moulinex</h3>
           </div>
         </article>
-        <article class="bg-white my-1 product-shadow">
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-macbook-pro-2019.jpg"
             alt="Macbook Pro 2019"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$230.000</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$230.000</p>
             <p class="color-green text-lg">20% off</p>
-            <h3 class="text-lg description">MacBook Pro 2019</h3>
+            <h3 class="text-lg description w-100">MacBook Pro 2019</h3>
           </div>
         </article>
-        <article class="bg-white my-1 product-shadow">
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-samsung-galaxy-s10.jpg"
             alt="Samsung Galaxy S10"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$70.500</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$70.500</p>
             <p class="color-green text-lg">10% off</p>
-            <h3 class="text-lg description">Samsung Galaxy S10</h3>
+            <h3 class="text-lg description w-100">Samsung Galaxy S10</h3>
           </div>
         </article>
-        <article class="bg-white my-1 product-shadow">
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-tv-samsung-smart.jpg"
             alt="Samsung Galaxy S10"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$23.200</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$23.200</p>
             <p class="color-green text-lg">5% off</p>
-            <h3 class="text-lg description">SmartTv Samsung 43"</h3>
+            <h3 class="text-lg description w-100">SmartTv Samsung 43"</h3>
           </div>
         </article>
       </section>
-      <section class="p-1">
-        <h2>Ofertas</h2>
-        <article class="bg-white my-1 product-shadow">
+      <section class="p-1 flex flex-wrap gap">
+        <h2 class="title w-100">Ofertas</h2>
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-cafetera-moulinex.jpg"
             alt="Cafetera Moulinex"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$6.770</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$6.770</p>
             <p class="color-green text-lg">40% OFF</p>
-            <h3 class="text-lg description">Cafetera Moulinex</h3>
+            <h3 class="text-lg description w-100">Cafetera Moulinex</h3>
           </div>
         </article>
-        <article class="bg-white my-1 product-shadow">
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-macbook-pro-2019.jpg"
             alt="Macbook Pro 2019"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$230.000</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$230.000</p>
             <p class="color-green text-lg">20% off</p>
-            <h3 class="text-lg description">MacBook Pro 2019</h3>
+            <h3 class="text-lg description w-100">MacBook Pro 2019</h3>
           </div>
         </article>
-        <article class="bg-white my-1 product-shadow">
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-samsung-galaxy-s10.jpg"
             alt="Samsung Galaxy S10"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$70.500</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$70.500</p>
             <p class="color-green text-lg">10% off</p>
-            <h3 class="text-lg description">Samsung Galaxy S10</h3>
+            <h3 class="text-lg description w-100">Samsung Galaxy S10</h3>
           </div>
         </article>
-        <article class="bg-white my-1 product-shadow">
+        <article
+          class="product bg-white my-1 product-shadow w-100 md-w-50 lg-w-25"
+        >
           <img
             class="w-100"
             src="/images/img-tv-samsung-smart.jpg"
             alt="Samsung Galaxy S10"
           />
-          <div class="bt-1 border-grey p-1">
-            <p class="text-xl">$23.200</p>
+          <div class="bt-1 border-grey p-1 relative flex flex-wrap">
+            <i class="fa-solid fa-truck truck-icon"></i>
+            <p class="text-xl mr-1">$23.200</p>
             <p class="color-green text-lg">5% off</p>
-            <h3 class="text-lg description">SmartTv Samsung 43"</h3>
+            <h3 class="text-lg description w-100">SmartTv Samsung 43"</h3>
           </div>
         </article>
       </section>
